// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileData TileData renders all colors as expected 1`] = `
<div
  className="Flex rowGap2 columnGap2 xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#003c961A",
                  "borderColor": "#003c96",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#11a69c1A",
                  "borderColor": "#11a69c",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#924af71A",
                  "borderColor": "#924af7",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#d177111A",
                  "borderColor": "#d17711",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#ff53831A",
                  "borderColor": "#ff5383",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#00ab551A",
                  "borderColor": "#00ab55",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#4003871A",
                  "borderColor": "#400387",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#f2681f1A",
                  "borderColor": "#f2681f",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#0050621A",
                  "borderColor": "#005062",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#de2c621A",
                  "borderColor": "#de2c62",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#660e001A",
                  "borderColor": "#660e00",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              Text Impressions
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.23M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData TileData renders with tooltip 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    aria-label="This is a tooltip"
    className="box"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="box"
      style={
        Object {
          "maxWidth": 196,
        }
      }
    >
      <div
        aria-disabled={false}
        className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="baseTile tileWidth selected"
          style={
            Object {
              "backgroundColor": "#0081fe1A",
              "borderColor": "#0081fe",
            }
          }
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap0 columnGap1 xsDirectionColumn"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 24,
                      }
                    }
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="box"
                        style={
                          Object {
                            "minWidth": 80,
                          }
                        }
                      >
                        <div
                          className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 2,
                            }
                          }
                        >
                          Text Impressions
                          <div
                            className="box relative"
                            style={
                              Object {
                                "display": "inline",
                              }
                            }
                          >
                            <div
                              className="box xsDisplayVisuallyHidden"
                            >
                              ,
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                      >
                        1.23M
                        <div
                          className="box relative"
                          style={
                            Object {
                              "display": "inline",
                            }
                          }
                        >
                          <div
                            className="box xsDisplayVisuallyHidden"
                          >
                            ,
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData TileData shows readonly checkboxes 1`] = `
<div
  className="Flex rowGap2 columnGap2 xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.43M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="box"
                  >
                    <div
                      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                    >
                      <div
                        className="box paddingX1 relative"
                      >
                        <input
                          aria-hidden={true}
                          aria-invalid="false"
                          checked={true}
                          className="input sizeSm inputEnabled readOnly"
                          disabled={true}
                          id="readonly-checkbox-blah-:rg:"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          type="checkbox"
                        />
                        <div
                          className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                          style={
                            Object {
                              "backgroundColor": "#0081fe",
                              "borderColor": "transparent",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="icon inverseIcon iconBlock"
                            height={8}
                            role="img"
                            viewBox="0 0 24 24"
                            width={8}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.13M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="box"
                  >
                    <div
                      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                    >
                      <div
                        className="box paddingX1 relative"
                      >
                        <input
                          aria-hidden={true}
                          aria-invalid="false"
                          checked={true}
                          className="input sizeSm inputEnabled readOnly"
                          disabled={true}
                          id="readonly-checkbox-blah-:rh:"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          type="checkbox"
                        />
                        <div
                          className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                          style={
                            Object {
                              "backgroundColor": "#0081fe",
                              "borderColor": "transparent",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="icon inverseIcon iconBlock"
                            height={8}
                            role="img"
                            viewBox="0 0 24 24"
                            width={8}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box xsDisplayBlock"
    >
      <div
        aria-label="This is a tooltip"
        className="box"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="box"
          style={
            Object {
              "maxWidth": 196,
            }
          }
        >
          <div
            aria-disabled={false}
            className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className="baseTile tileWidth selected"
              style={
                Object {
                  "backgroundColor": "#0081fe1A",
                  "borderColor": "#0081fe",
                }
              }
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap0 columnGap1 xsDirectionColumn"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                        style={
                          Object {
                            "minHeight": 24,
                          }
                        }
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box"
                            style={
                              Object {
                                "minWidth": 80,
                              }
                            }
                          >
                            <div
                              className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                              style={
                                Object {
                                  "WebkitLineClamp": 2,
                                }
                              }
                            >
                              <div
                                className="box relative"
                                style={
                                  Object {
                                    "display": "inline",
                                  }
                                }
                              >
                                <div
                                  className="box xsDisplayVisuallyHidden"
                                >
                                  ,
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                          >
                            1.13M
                            <div
                              className="box relative"
                              style={
                                Object {
                                  "display": "inline",
                                }
                              }
                            >
                              <div
                                className="box xsDisplayVisuallyHidden"
                              >
                                ,
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="box"
                  >
                    <div
                      className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
                    >
                      <div
                        className="box paddingX1 relative"
                      >
                        <input
                          aria-hidden={true}
                          aria-invalid="false"
                          checked={true}
                          className="input sizeSm inputEnabled readOnly"
                          disabled={true}
                          id="readonly-checkbox-blah-:ri:"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          type="checkbox"
                        />
                        <div
                          className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                          style={
                            Object {
                              "backgroundColor": "#0081fe",
                              "borderColor": "transparent",
                            }
                          }
                        >
                          <svg
                            aria-hidden={true}
                            aria-label=""
                            className="icon inverseIcon iconBlock"
                            height={8}
                            role="img"
                            viewBox="0 0 24 24"
                            width={8}
                          >
                            <path
                              d="test-file-stub"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData TileData title truncates when really long 1`] = `
<div
  className="box xsDisplayBlock"
>
  <div
    aria-label="This is a tooltip"
    className="box"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="box"
      style={
        Object {
          "maxWidth": 196,
        }
      }
    >
      <div
        aria-disabled={false}
        className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="baseTile tileWidth selected"
          style={
            Object {
              "backgroundColor": "#0081fe1A",
              "borderColor": "#0081fe",
            }
          }
        >
          <div
            className="Flex rowGap2 columnGap2 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap0 columnGap1 xsDirectionColumn"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                    style={
                      Object {
                        "minHeight": 24,
                      }
                    }
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="box"
                        style={
                          Object {
                            "minWidth": 80,
                          }
                        }
                      >
                        <div
                          className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                          style={
                            Object {
                              "WebkitLineClamp": 2,
                            }
                          }
                        >
                          This is some super super super long text and you shouldn't be able to read the last part of it. It's going to use ellipsis to cutoff the last part
                          <div
                            className="box relative"
                            style={
                              Object {
                                "display": "inline",
                              }
                            }
                          >
                            <div
                              className="box xsDisplayVisuallyHidden"
                            >
                              ,
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                  >
                    <div
                      className="FlexItem"
                    >
                      <div
                        className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                      >
                        1.23M
                        <div
                          className="box relative"
                          style={
                            Object {
                              "display": "inline",
                            }
                          }
                        >
                          <div
                            className="box xsDisplayVisuallyHidden"
                          >
                            ,
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData Tiledata is disabled 1`] = `
<div
  className="box"
  style={
    Object {
      "maxWidth": 196,
    }
  }
>
  <div
    aria-disabled={true}
    className="hideOutline tapTransition rounding4 fullWidth"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={null}
  >
    <div
      className="baseTile tileWidth selected disabled"
      style={Object {}}
    >
      <div
        className="Flex rowGap2 columnGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap0 columnGap1 xsDirectionColumn"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                style={
                  Object {
                    "minHeight": 24,
                  }
                }
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="box"
                    style={
                      Object {
                        "minWidth": 80,
                      }
                    }
                  >
                    <div
                      className="Text fontSize200 subtleText alignStart breakWord fontWeightNormal lineClamp"
                      style={
                        Object {
                          "WebkitLineClamp": 2,
                        }
                      }
                    >
                      Text Impressions
                      <div
                        className="box relative"
                        style={
                          Object {
                            "display": "inline",
                          }
                        }
                      >
                        <div
                          className="box xsDisplayVisuallyHidden"
                        >
                          ,
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Text fontSize400 subtleText alignStart breakWord fontWeightSemiBold"
                  >
                    1.23M
                    <div
                      className="box relative"
                      style={
                        Object {
                          "display": "inline",
                        }
                      }
                    >
                      <div
                        className="box xsDisplayVisuallyHidden"
                      >
                        ,
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem"
        >
          <div
            className="box"
          >
            <div
              className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
            >
              <div
                className="box paddingX1 relative"
              >
                <input
                  aria-hidden={true}
                  aria-invalid="false"
                  checked={true}
                  className="input sizeSm inputEnabled readOnly"
                  disabled={true}
                  id="readonly-checkbox-blah-:re:"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="checkbox"
                />
                <div
                  className="darkGrayBg borderSelected borderRadiusSm sizeSm check"
                  style={
                    Object {
                      "backgroundColor": "var(--color-gray-roboflow-300)",
                      "borderColor": "transparent",
                    }
                  }
                >
                  <svg
                    aria-hidden={true}
                    aria-label=""
                    className="icon inverseIcon iconBlock"
                    height={8}
                    role="img"
                    viewBox="0 0 24 24"
                    width={8}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData renders 1`] = `
<div
  className="box"
  style={
    Object {
      "maxWidth": 196,
    }
  }
>
  <div
    aria-disabled={false}
    className="hideOutline tapTransition rounding4 accessibilityOutline fullWidth pointer"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="baseTile tileWidth selected"
      style={
        Object {
          "backgroundColor": "#0081fe1A",
          "borderColor": "#0081fe",
        }
      }
    >
      <div
        className="Flex rowGap2 columnGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap0 columnGap1 xsDirectionColumn"
          >
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                style={
                  Object {
                    "minHeight": 24,
                  }
                }
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="box"
                    style={
                      Object {
                        "minWidth": 80,
                      }
                    }
                  >
                    <div
                      className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
                      style={
                        Object {
                          "WebkitLineClamp": 2,
                        }
                      }
                    >
                      Text Impressions
                      <div
                        className="box relative"
                        style={
                          Object {
                            "display": "inline",
                          }
                        }
                      >
                        <div
                          className="box xsDisplayVisuallyHidden"
                        >
                          ,
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem"
            >
              <div
                className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                  >
                    1.23M
                    <div
                      className="box relative"
                      style={
                        Object {
                          "display": "inline",
                        }
                      }
                    >
                      <div
                        className="box xsDisplayVisuallyHidden"
                      >
                        ,
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
